Refactor project structure and update class implementations
- Moved source files to organized directories: models, core, and ui.
- Updated include paths in header files to reflect new structure.
- Enhanced Book, Patron, and Transaction classes with improved methods and serialization.
- Removed redundant source files and cleaned up ConsoleInterface for better readability.
- Updated LibraryController to manage books and patrons more efficiently.
- Improved user interface messages for clarity and consistency.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,11 +16,11 @@ include_directories(include)
 
 add_executable(lms
     src/main.cpp
-    src/Book.cpp
-    src/Patron.cpp
-    src/Transaction.cpp
-    src/LibraryController.cpp
-    src/ConsoleInterface.cpp
+    src/models/Book.cpp
+    src/models/Patron.cpp
+    src/models/Transaction.cpp
+    src/core/LibraryController.cpp
+    src/ui/ConsoleInterface.cpp
 )
 
 # Future: tests target
