--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,10 +20,12 @@ add_executable(lms
     src/models/Patron.cpp
     src/models/Transaction.cpp
     src/core/LibraryController.cpp
+    src/core/LoanService.cpp
     src/ui/ConsoleInterface.cpp
     src/managers/BookManager.cpp
     src/managers/PatronManager.cpp
     src/managers/TransactionManager.cpp
+    src/utils/utils.cpp
 )
 
 # Future: tests target
