Refactor CMakeLists.txt to include additional UI components and update Array class copy constructor and assignment operator for const correctness. Implement Row function in UiComponents.cpp for better modularity.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,11 +21,16 @@ add_executable(lms
     src/models/Transaction.cpp
     src/core/LibraryController.cpp
     src/core/LoanService.cpp
-    src/ui/ConsoleInterface.cpp
     src/managers/BookManager.cpp
     src/managers/PatronManager.cpp
     src/managers/TransactionManager.cpp
     src/utils/utils.cpp
+    src/ui/ConsoleInterface.cpp
+    src/ui/BookMenu.cpp
+    src/ui/PatronMenu.cpp
+    src/ui/TransactionMenu.cpp
+    src/ui/UiHelpers.cpp
+    src/ui/UiComponents.cpp
 )
 
 # Future: tests target
