--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "cmake:configure": "cmake -S . -B build",
     "cmake:build": "cmake --build build",
-    "run": "build/lms.exe",
+    "run": "build\\\\lms.exe",
     "dev": "npm run cmake:configure && npm run cmake:build && npm run run"
   }
 }
