Fix compile-time errors by replacing <climits> with <limits> in UiHelpers.hpp, updating input handling in clearInput and waitForEnter functions, and improving output formatting in print functions.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "cmake:configure": "cmake -S . -B build",
     "cmake:build": "cmake --build build",
+    "build" : "npm run cmake:configure && npm run cmake:build",
     "run": "build\\\\lms.exe",
     "dev": "npm run cmake:configure && npm run cmake:build && npm run run"
   }
