Fix compile-time errors: update CMakeLists to include BorrowMenu; refactor load/save methods in managers to return bool; streamline find operations in search classes; adjust update methods in UI components for consistency.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,7 @@ add_executable(lms
     src/ui/UiHelpers.cpp
     src/ui/UiComponents.cpp
     src/ui/Schemas.cpp
+    src/ui/BorrrowMenu.cpp
 )
 
 # Ensure target-level properties also point to project root (per-config)
